fix vertical alignment

--- a/doc/snana_manual.tex
+++ b/doc/snana_manual.tex
@@ -20,7 +20,8 @@
 \setlength{\textheight}{9.5in}
 \setlength{\textwidth}{7.0in}
 \setlength{\oddsidemargin}{-0.2in}
-\setlength{\topmargin}{+0.2in}
+% xxx \setlength{\topmargin}{+0.2in}
+\setlength{\topmargin}{-0.5in}
 %\setlength{\footheight}{0.4in}
 \setlength{\headsep}{0.0in}
 
