auto extend spectrograph bins

--- a/doc/snana_manual.tex
+++ b/doc/snana_manual.tex
@@ -3953,6 +3953,7 @@ the sim-input file (or via command-line override):
    HOSTLIB_FIXRAN_RADIUS:  #.##       # fix radial random number (0-1)
    HOSTLIB_FIXRAN_PHI:     #.##       # fix phi random number (0-1)
    HOSTLIB_FIXSERSIC:  a b n a_rot    # a,b in arcsec, a_rot in deg
+   HOSTLIB_ABMAG_FORCE:   #.##        # force mag for galmag and host spectrum
 \end{Verbatim}
 Only the {\tt HOSTLIB\_FILE} key is required, while the
 other keys are optional. Ideally all surveys would use
