--- a/doc/snana_manual.tex
+++ b/doc/snana_manual.tex
@@ -3889,7 +3889,7 @@ n0_Sersic: 0.5    # optional: fix sersic index for each host
                   # Note that n0_Sersic can be defined only once;
                   # either among the VARNAMES or here.
 
-NVAR_WGTMAP: 1  # obsolete key starting at SNANA version v10_70
+OPT_EXTRAP_WGTMAP: 1  # option to bring out-of-range values to grid edge
 VARNAMES_WGTMAP: r_obs  WGT  SNMAGSHIFT
 WGT:  -25.0  1.2  -0.05
 WGT:  -23.0  1.0  -0.05
